force-app/main/default/objects/SalesTacticalPlan__c/fields/Sector_Name__c.field-meta.xml
<CustomField>
    <fullName>Sector_Name__c</fullName>
    <label>Sector Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector</valueSetName>
    </valueSet>
</CustomField>