force-app/main/default/objects/SalesTacticalPlan__c/fields/Tactic_Einstein_Score__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Einstein_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tactic: Einstein Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>