force-app/main/default/objects/SalesTacticalPlan__c/fields/Tactic_Opp_Value__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Opp_Value__c</fullName>
    <description>This is used to populate the dual list box in the management flow. It generally shouldn&#39;t be edited outside of that dual list box.</description>
    <label>Tactical_Opp_Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>