force-app/main/default/objects/SalesTacticalPlan__c/fields/Tactic_Proximity_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Proximity_to_Renewal__c</fullName>
    <label>Tactic_Proximity_to_Renewal__c</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>